# bee-py-old

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  ape-config.yaml  pyproject.toml  readme-ai.md  setup.cfg  setup.py
docs/: conf.py  index.rst
src/bee_py/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
