[tool.poetry]
name = "bee-py"
version = "0.1.0"
description = "Python client library for connecting to Bee decentralised storage"
authors = ["SAIKAT KARMAKAR <saikickkarma@protonmail.com>"]
license = "LGPL-3.0, GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
eth-ape = "^0.6.22"

[tool.poetry.group.dev.dependencies]
ape-alchemy = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
