[tool.poetry]
name = "bee-py"
version = "0.1.0"
description = "Python client library for connecting to Bee decentralised storage"
authors = ["SAIKAT KARMAKAR <saikickkarma@protonmail.com>"]
license = "LGPL-3.0, GPL-3.0"
readme = "README.md"
packages = [{ include = "bee_py", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
eth-ape = "^0.6.24"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.project]
name = "bee_py"

[tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
#]
# NOTE: Prevents the ape plugin from activating on our tests
# addopts = "-p no:ape_test"


[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.mdformat]
number = true

[[tool.mypy.overrides]]
module = "eth_keys.*"
ignore_missing_imports = true

# * not working so defined in setup.cfg
# [tool.flake8]
# line-length = 100
# exclude = ["__pycache__", ".venv/*"]
